fixed the horizontal scroll bar in mobiles

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1313,197 +1313,6 @@ select.form-control {
   height: 100%;
   background-size: 18px 18px;
 }
-.last-week {
-  position: relative;
-  border-radius: 0 0 4px 4px;
-}
-.last-week .card-progress {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 5px;
-  background: #FFDF00;
-}
-.last-week .card-header,
-.last-week .listy {
-  padding: 0 20px 10px;
-  margin: 0 -15px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-.last-week .card-header .illustration,
-.last-week .listy .illustration {
-  width: 65px;
-  height: 75px;
-  background: url(../images/this-week.png) no-repeat center;
-  background-size: contain;
-  margin-right: 15px;
-}
-.last-week .this-week-label {
-  font-size: 13px;
-  color: #828282;
-  opacity: 0.6;
-  display: block;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.last-week h2 {
-  font-size: 18px;
-  font-weight: normal;
-  color: #303030;
-  margin: 0;
-  padding-top: 19px;
-}
-.last-week .this-week-total {
-  font-size: 22px;
-  line-height: 23px;
-  padding-top: 16px;
-  color: #303030;
-}
-.last-week .this-title:after,
-.last-week .list-top:after,
-.last-week .list-footer:after {
-  content: '';
-  display: table;
-  clear: both;
-}
-.last-week .day-info h3 {
-  font-size: 16px;
-  color: #80af03;
-  font-weight: normal;
-  margin-bottom: 3px;
-}
-.last-week .day-times {
-  color: #303030;
-}
-.last-week .list-top .this-day-total {
-  font-size: 18px;
-  margin-top: 19px;
-  line-height: 20px;
-  color: #303030;
-}
-.last-week .list-top .this-day-total small {
-  margin-left: 2px;
-  color: #828282;
-}
-.last-week .this-day-total {
-  font-size: 24px;
-}
-.last-week .listy {
-  padding-bottom: 17px;
-  position: relative;
-  transition: all 0.5s;
-}
-.last-week .listy:last-child {
-  border-bottom: 0;
-  margin-bottom: -15px;
-}
-.last-week .show-opened {
-  display: none;
-}
-.last-week .list-footer {
-  visibility: hidden;
-  width: 100%;
-  height: 38px;
-  opacity: 0;
-  position: absolute;
-  bottom: 0;
-  transition: all 0.5s;
-}
-.last-week.closed .this-yesterday.listy {
-  border-bottom: 0;
-  margin-bottom: -15px;
-}
-.last-week.closed:before {
-  content: '';
-  position: absolute;
-  bottom: -7px;
-  left: 10px;
-  right: 10px;
-  top: 15px;
-  background: #fff;
-  border-radius: 2px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  z-index: -1;
-  opacity: 0.7;
-}
-.last-week.opened .show-opened {
-  display: block;
-}
-.last-week.opened .list-footer {
-  visibility: visible;
-  opacity: 1;
-  bottom: 18px;
-}
-.last-week.opened .show-collapsed {
-  display: none;
-}
-.last-week.opened .list-top {
-  padding-bottom: 15px;
-}
-.last-week.opened .listy {
-  padding-bottom: 60px;
-}
-.last-week .tims {
-  float: left;
-  width: 41%;
-}
-.last-week .tims .icon {
-  float: left;
-  width: 35px;
-  height: 35px;
-  margin-right: 10px;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-.last-week .start-time .icon {
-  background-image: url(../images/sun.png);
-}
-.last-week .end-time .icon {
-  background-image: url(../images/moon.png);
-}
-@media screen and (max-width: 340px) {
-  .last-week .card-header {
-    padding: 0 15px 10px;
-  }
-  .last-week .card-header .illustration {
-    width: 45px;
-  }
-  .last-week .this-title .this-week-label {
-    width: 48%;
-  }
-}
-.last-week.monday-card:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-.last-week.monday-card .card-header {
-  border-bottom: 0;
-}
-.last-week.monday-card .this-week-label {
-  max-width: 250px;
-  white-space: normal;
-  display: block;
-  padding-top: 15px;
-}
-.card-navigation {
-  padding: 4px 15px !important;
-  margin-bottom: 45px;
-}
-.card-navigation:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-.card-navigation .table-navi .week-navi {
-  padding: 12px 20px;
-}
-.card-navigation .btn {
-  padding: 13px;
-}
 svg {
   width: 100%;
   height: 260px;
